--- a/src/components/Legal/LegalPageBody.scss
+++ b/src/components/Legal/LegalPageBody.scss
@@ -24,24 +24,24 @@
 
       &.col-left {
         width: 300px;
-        margin-right: 30px;
+        margin-right: 50px;
 
         @include media-down(mobile) {
           position: sticky;
           top: 0;
           width: 100%;
-          z-index: 1;
+          z-index: 2;
         }
       }
 
       &.col-right {
         flex: 1;
-        margin-left: 30px;
+        margin-left: 50px;
 
         @include media-down(mobile) {
           width: 100%;
           margin-left: 0;
-          padding: 0 20px;
+          padding: 40px 20px;
         }
       }
     }
