--- a/src/components/Mural/HomeMural.scss
+++ b/src/components/Mural/HomeMural.scss
@@ -1,6 +1,7 @@
 .home-mural {
   padding-top: calc(#{$header-height} + 100px);
   background-color: #CEECF7;
+  overflow: hidden;
 
   @include media-down(mobile) {
     padding-top: calc(#{$header-height-mobile} + 50px);
