--- a/src/components/Mural/HomeMural.scss
+++ b/src/components/Mural/HomeMural.scss
@@ -7,6 +7,10 @@
     padding-top: calc(#{$header-height-mobile} + 50px);
   }
 
+  .parallax {
+    will-change: transform;
+  }
+
   .valley-scene {
     width: 100%;
     height: 26.125vw;
