--- a/src/sass/global/_animations.scss
+++ b/src/sass/global/_animations.scss
@@ -13,3 +13,45 @@
     transform: translateY(0%);
   }
 }
+
+@keyframes floatUpDown {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(30px);
+  }
+}
+
+@keyframes floatUpDown {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes floatLeftRight {
+  0% {
+    transform: translateX(0px) translateY(0px);
+  }
+  20% {
+    transform: translateX(-10px) translateY(-10px);;
+  }
+  30% {
+    transform: translateX(-20px) translateY(0px);
+  }
+  40% {
+    transform: translateX(-30px) translateY(10px);
+  }
+  70% {
+    transform: translateX(-30px) translateY(10px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
