--- a/src/sass/global/_common.scss
+++ b/src/sass/global/_common.scss
@@ -10,11 +10,12 @@
 body {
   height: 100%;
   position: relative;
-  overflow: visible;
 
   &.nav-open {
-    overflow: hidden;
-    height: 100vh;
+    #app {
+      overflow: hidden;
+      max-height: 100vh;
+    }
   }
 }
 
