--- a/src/components/Legal/LegalPageBody.scss
+++ b/src/components/Legal/LegalPageBody.scss
@@ -26,6 +26,11 @@
         width: 300px;
         margin-right: 50px;
 
+        @include media-down(tablet) {
+          margin-right: 20px;
+          width: 250px;
+        }
+
         @include media-down(mobile) {
           position: sticky;
           top: 0;
@@ -37,6 +42,11 @@
       &.col-right {
         flex: 1;
         margin-left: 50px;
+
+        @include media-down(tablet) {
+          margin-left: 20px;
+          padding-bottom: 80px;
+        }
 
         @include media-down(mobile) {
           width: 100%;
