--- a/src/components/Legal/LegalPageHero.scss
+++ b/src/components/Legal/LegalPageHero.scss
@@ -80,13 +80,16 @@
     width: 75%;
 
     @include media-down(wrapper) {
-      height: 100%;
-      width: 100%;
+      height: 95%;
+      width: 95%;
+      @include vertical-align(absolute);
+      left: auto;
+      right: 20px;
     }
 
     @include media-down(mobile) {
-      height: 90%;
-      width: 90%;
+      height: 75%;
+      width: 75%;
     }
 
     svg {
