--- a/src/components/Layout/Header.scss
+++ b/src/components/Layout/Header.scss
@@ -6,6 +6,7 @@ header.header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
   transform: translateY(0);
   transition: transform 0.5s ease;
 
@@ -45,21 +46,13 @@ header.header {
   }
 
   .toggle-nav-button {
-    width: 40px;
-    height: 30px;
-    margin: 40px;
-    box-sizing: content-box;
-    position: relative;
+    padding: 40px;
 
     @include media-down(mobile) {
-      margin: 20px;
-      width: 32px;
-      height: 22px;
+      padding: 20px;
     }
 
     .hamburger-icon {
-      top: 0;
-      @include horizontal-align(absolute);
       width: 38px;
       height: 26px;
 
@@ -70,8 +63,6 @@ header.header {
     }
 
     .close-icon {
-      top: 0;
-      @include horizontal-align(absolute);
       width: 30px;
       height: 30px;
 
