Began tablet styling Donate page; Double click to checkout @ mobile

--- a/src/components/Donations/DonationModal.scss
+++ b/src/components/Donations/DonationModal.scss
@@ -16,7 +16,7 @@
     button {
       margin-right: 30px;
 
-      @include media-down(mobile) {
+      @include media-down(small-mobile) {
         flex: 1;
         min-width: 0;
         margin: 0;
