--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -33,14 +33,14 @@ footer.footer {
       display: flex;
       flex-direction: row;
 
-      @include media-down(mobile) {
+      @include media-down(small-mobile) {
         flex-direction: column;
       }
 
       .col {
         width: 50%;
 
-        @include media-down(mobile) {
+        @include media-down(small-mobile) {
           width: 100%;
           margin-bottom: 80px;
 
@@ -59,6 +59,10 @@ footer.footer {
             margin-right: 50px;
 
             @include media-down(mobile) {
+              margin-right: 30px;
+            }
+
+            @include media-down(small-mobile) {
               width: 50%;
             }
 
