--- a/src/components/Slices/ImageTextBlocks.scss
+++ b/src/components/Slices/ImageTextBlocks.scss
@@ -9,6 +9,7 @@
 
   @include media-down(mobile) {
     flex-direction: column-reverse;
+    align-items: center;
     margin-bottom: 80px;
   }
 
@@ -35,6 +36,15 @@
       padding-bottom: 90%;
       position: relative;
       transform-style: preserve-3d;
+
+      @include media-down(mobile) {
+        width: 100%;
+        height: 90vw;
+        padding-bottom: 0;
+        max-height: 500px;
+        max-width: 500px;
+        margin: 0 auto;
+      }
 
 
       .colourful-background {
@@ -82,6 +92,10 @@
     flex-direction: column;
     justify-content: center;
 
+    @include media-down(mobile) {
+      align-items: center;
+    }
+
     .container {
       max-width: 450px;
     }
@@ -115,7 +129,7 @@
     }
 
     .actions {
-      @include media-down(mobile) {
+      @include media-down(small-mobile) {
         display: flex;
         flex-direction: row;
         justify-content: center;
