--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -32,6 +32,10 @@
       position: relative;
       z-index: 2;
 
+      @include media-down(wrapper) {
+        padding: 0 40px;
+      }
+
       .menu-row {
         display: flex;
         flex-direction: row;
