--- a/src/components/Partners/PartnerItem.scss
+++ b/src/components/Partners/PartnerItem.scss
@@ -7,13 +7,27 @@
   margin-bottom: 60px;
 
   @include media-down(mobile) {
+    width: calc((100% / 2) - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    @include media-up(small-mobile) {
+      &:nth-child(even) {
+        margin-right: 0;
+      }
+    }
+  }
+
+  @include media-down(small-mobile) {
     width: 100%;
     margin: 0;
     padding: 0 15px;
   }
 
   &:nth-child(3n) {
-    margin-right: 0;
+    @include media-up(mobile) {
+      margin-right: 0;
+    }
   }
 
   .image-container {
@@ -23,7 +37,7 @@
     margin: 0 auto;
     margin-bottom: 20px;
 
-    @include media-down(mobile) {
+    @include media-down(small-mobile) {
       padding-bottom: 0;
       width: 100%;
       height: 65vw;
@@ -38,7 +52,7 @@
       height: 100%;
       z-index: 1;
 
-      @include media-down(mobile) {
+      @include media-down(small-mobile) {
         width: 100%;
         height: 100%;
       }
@@ -75,7 +89,7 @@
       text-align: center;
       transition: color 0.3s ease;
 
-      @include media-down(mobile) {
+      @include media-down(small-mobile) {
         font-size: 14px;
       }
     }
