--- a/src/components/Slices/ExplanationBlocks.scss
+++ b/src/components/Slices/ExplanationBlocks.scss
@@ -32,9 +32,13 @@
         margin-right: 30px;
 
         @include media-down(mobile) {
-          width: 85%;
+          width: 70%;
           padding: 0 20px;
           margin-right: 0;
+        }
+
+        @include media-down(small-mobile) {
+          width: 85%;
         }
 
         &:last-child {
