--- a/src/components/Home/SectionIntro.scss
+++ b/src/components/Home/SectionIntro.scss
@@ -1,3 +1,29 @@
 .section-intro {
-  
+  background-color: $tertiary;
+  padding: 120px 0;
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .label {
+    display: block;
+    @include h4();
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .headline {
+    @include h1();
+    text-align: center;
+    max-width: 650px;
+    margin-bottom: 60px;
+  }
+
+  .html-content {
+    max-width: 550px;
+    text-align: center;
+  }
 }
