--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -22,11 +22,11 @@ footer.footer {
 
   .middle-layer {
     padding-bottom: 5%;
-    background-color: $earth;
+    background-color: $earth-lighter;
   }
 
   .bottom-layer {
-    background-color: $earth-darker;
+    background-color: $earth-even-lighter;
     padding: 50px 0;
 
     .cols {
