--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -1,3 +1,55 @@
 .issue-blocks {
-  
+  padding: 120px 0;
+
+  .issues {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+    .issue {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 100px;
+      position: relative;
+
+      &.last-child {
+        margin-right: 0;
+      }
+
+      .illustration {
+        width: 100%;
+        padding-bottom: 100%;
+        margin-bottom: 40px;
+        position: relative;
+
+        svg {
+          @include center-align(absolute);
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .count {
+        display: inline-block;
+        @include h4();
+        color: $secondary;
+        border-bottom: $secondary 3px dashed;
+        margin-bottom: 40px;
+      }
+
+      .title {
+        margin-bottom: 40px;
+        text-align: center;
+      }
+
+      .html-content {
+        p {
+          text-align: center;
+        }
+      }
+    }
+  }
+
 }
