--- a/src/components/Home/CallToActionsBlock.scss
+++ b/src/components/Home/CallToActionsBlock.scss
@@ -1,3 +1,78 @@
 .call-to-actions-block {
 
+  .section-intro {
+    .container {
+      padding: 120px 0 180px;
+    }
+  }
+
+  .call-to-actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 120px;
+    position: relative;
+    z-index: 2;
+
+    @include media-down(mobile) {
+      flex-wrap: wrap;
+      align-items: flex-start;
+    }
+
+    .call-to-action {
+      margin-top: -120px;
+      width: calc((100% / 3) - 80px);
+      position: relative;
+      margin-right: 80px;
+
+      &:last-child {
+        margin-right: 0px;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        padding: 60px 30px;
+        background-color: $white;
+        border: 3px solid $tertiary;
+        border-radius: 16%;
+        transition: transform 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
+        transform: translateX(-7.5px) translateY(-7.5px);
+        position: relative;
+        z-index: 1;
+
+        @include media-down(mobile) {
+          padding: 15px 10px 25px;
+        }
+
+        .label {
+          @include h4();
+          margin-bottom: 20px;
+        }
+
+        .title {
+          @include h2();
+          margin-bottom: 20px;
+        }
+
+        .html-content {
+          margin-bottom: 40px;
+        }
+      }
+
+      &:before {
+        content: '';
+        @include center-align(absolute);
+        background-color: $tertiary;
+        border-radius: 16%;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+    }
+
+
+
+  }
 }
