--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -18,11 +18,8 @@
 
       .outcome-buttons {
         .outcome-selector {
-          width: 65px;
-          height: 65px;
-          border-radius: 50%;
           position: absolute;
-          border: 3px solid $secondary;
+          padding: 20px;
           background-color: $white;
 
           &:nth-child(1) {
@@ -45,6 +42,73 @@
             top: 50%;
             left: 0;
             transform: translateY(-50%) translateX(-50%);
+          }
+
+          .icon-container {
+            width: 65px;
+            height: 65px;
+            border: 3px solid $secondary;
+            border-radius: 50%;
+            position: relative;
+            z-index: 1;
+
+            &:before {
+              @include center-align(absolute);
+              content: '';
+              height: 140%;
+              width: 140%;
+              border: 2px dashed $secondary;
+              border-radius: 50%;
+              opacity: 0;
+              transition: opacity 0.5s ease;
+              will-change: transform;
+            }
+          }
+
+          &.active {
+            .icon-container {
+              background-color: $secondary;
+
+              .icon {
+                svg {
+                  fill: $white;
+                }
+              }
+
+              &:before {
+                opacity: 1;
+              }
+            }
+
+            &:hover {
+              cursor: default;
+              
+              .icon-container {
+                &:before {
+                  animation: none;
+                }
+              }
+            }
+          }
+
+          &:hover {
+            .icon-container {
+              &:before {
+                opacity: 1;
+                animation: rotate 5s infinite;
+                animation-timing-function: linear;
+                transform-origin: 0 0;
+
+                @keyframes rotate {
+                  from {
+                    transform: rotate(0deg) translateX(-50%) translateY(-50%);
+                  }
+                  to {
+                    transform: rotate(360deg) translateX(-50%) translateY(-50%);
+                  }
+                }
+              }
+            }
           }
 
           .icon {
@@ -79,10 +143,11 @@
         left: auto;
         bottom: 0;
         right: 0;
-        width: 50%;
-        max-width: 350px;
+        width: 55%;
+        max-width: 400px;
         background-color: $white;
         transform: translateX(50%);
+        padding: 20px;
 
         .title {
           @include h2();
