--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -48,6 +48,8 @@
             width: 65px;
             height: 65px;
             border: 3px solid $secondary;
+            background-color: $white;
+            transition: background-color 0.3s ease;
             border-radius: 50%;
             position: relative;
             z-index: 1;
@@ -82,7 +84,7 @@
 
             &:hover {
               cursor: default;
-              
+
               .icon-container {
                 &:before {
                   animation: none;
@@ -121,6 +123,7 @@
               height: 100%;
               width: 100%;
               fill: $secondary;
+              transition: fill 0.3s ease;
             }
           }
         }
