HomeMural mobile styling

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -22,6 +22,7 @@ $roots: #B7C38C;
 $earth: #303028; // top soil baby!
 $earth-lighter: #39392F;
 $earth-even-lighter: #424135;
+$sky: #CEECF7;
 
 /*=============================================>>>>>
 = Black/white =
