--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -67,12 +67,21 @@
         color: $secondary;
         border-bottom: $secondary 3px dashed;
         margin-bottom: 40px;
+
+        @include media-down(mobile) {
+          text-align: center;
+          margin-bottom: 20px;
+        }
       }
 
       .title {
         @include h2();
         margin-bottom: 40px;
         text-align: center;
+
+        @include media-down(mobile) {
+          margin-bottom: 30px;
+        }
       }
 
       .html-content {
