--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -12,6 +12,10 @@ footer.footer {
     background-position: center;
     padding: 60px 0;
 
+    @include media-down(mobile) {
+      background-size: 180%;
+    }
+
     .cols {
       display: flex;
       flex-direction: row;
@@ -26,11 +30,6 @@ footer.footer {
         display: flex;
         flex-direction: column;
 
-
-        &.col-logo {
-          flex: 2;
-        }
-
         @include media-down(mobile) {
           margin-right: 0;
           margin-bottom: 30px;
@@ -39,6 +38,23 @@ footer.footer {
         &:last-child {
           @include media-up(mobile) {
             margin-right: 0;
+          }
+        }
+
+
+        &.col-logo {
+          flex: 2;
+
+          @include media-down(mobile) {
+            margin-bottom: 50px;
+          }
+
+          .logo {
+            svg {
+              path {
+                fill: $roots;
+              }
+            }
           }
         }
 
@@ -65,6 +81,10 @@ footer.footer {
       margin-top: 30px;
       @include h4();
       color: $roots;
+
+      @include media-down(mobile) {
+        justify-content: flex-start;
+      }
 
       .studio {
         display: block;
