--- a/src/components/Home/CallToActionsBlock.scss
+++ b/src/components/Home/CallToActionsBlock.scss
@@ -3,6 +3,10 @@
   .section-intro {
     .container {
       padding: 120px 0 180px;
+
+      @include media-down(mobile) {
+        padding: 80px 0 120px;
+      }
     }
   }
 
@@ -16,6 +20,7 @@
     z-index: 2;
 
     @include media-down(mobile) {
+      margin-top: -60px;
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -29,7 +34,7 @@
 
       @include media-down(mobile) {
         width: 100%;
-        margin: 0 0 50px;
+        margin: 0 0 20px;
       }
 
       &:last-child {
@@ -51,7 +56,12 @@
         z-index: 1;
 
         @include media-down(mobile) {
-          padding: 15px 10px 25px;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          padding: 15px 20px;
+          border-radius: 16px;
+          transform: translateX(-5px) translateY(-5px);
         }
 
         .label {
@@ -62,10 +72,46 @@
         .title {
           @include h2();
           margin-bottom: 20px;
+
+          @include media-down(mobile) {
+            margin-bottom: 0;
+          }
         }
 
         .html-content {
           margin-bottom: 40px;
+
+          @include media-down(mobile) {
+            display: none;
+          }
+        }
+
+        .call-to-action-link {
+          @include media-down(mobile) {
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            min-width: 0;
+            background-color: $white;
+            border: 3px solid $secondary;
+            position: relative;
+
+            &:before {
+              display: none;
+            }
+            span {
+              @include center-align(absolute);
+              font-size: 0;
+              background-color: transparent;
+              background-image: url('../../assets/images/chevron-right.svg');
+              background-size: contain;
+              background-repeat: no-repeat;
+              background-position: center;
+              height: 15px;
+              width: 10px;
+              border: none;
+            }
+          }
         }
       }
 
@@ -77,6 +123,10 @@
         width: 100%;
         height: 100%;
         z-index: -1;
+
+        @include media-down(mobile) {
+          border-radius: 16px;
+        }
       }
     }
 
