Tablet styling for IssueBlocks

--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -7,7 +7,7 @@
     flex-wrap: nowrap;
 
     @include media-down(tablet) {
-      flex-wrap: wrap;
+      // flex-wrap: wrap;
     }
 
     @include media-down(mobile) {
@@ -23,10 +23,13 @@
       position: relative;
 
       @include media-down(tablet) {
+        flex: auto;
         margin: 0 30px;
+        width: calc((100% / 3) - 60px)
       }
 
       @include media-down(mobile) {
+        width: 100%;
         margin: 0 0 80px;
       }
 
@@ -62,6 +65,7 @@
       }
 
       .text-container {
+        width: 100%;
         max-width: 450px;
         display: flex;
         flex-direction: column;
@@ -76,7 +80,7 @@
         border-bottom: $secondary 3px dashed;
         margin-bottom: 40px;
 
-        @include media-down(mobile) {
+        @include media-down(tablet) {
           text-align: center;
           margin-bottom: 20px;
         }
@@ -87,7 +91,8 @@
         margin-bottom: 40px;
         text-align: center;
 
-        @include media-down(mobile) {
+        @include media-down(tablet) {
+          font-size: 28px;
           margin-bottom: 30px;
         }
       }
