--- a/src/components/Donations/DonationTile.scss
+++ b/src/components/Donations/DonationTile.scss
@@ -14,6 +14,21 @@
   }
 
   @include media-down(mobile) {
+    flex: none;
+    width: calc(50% - 40px);
+
+    &:nth-child(odd) {
+      margin: 0 20px 50px;
+    }
+    &:nth-child(even) {
+      margin: 0 20px 50px;
+    }
+    &:last-child {
+      margin: 0 20px 50px;
+    }
+  }
+
+  @include media-down(mobile) {
     width: calc(50% - 20px);
     margin-bottom: 50px;
 
