Fixes for phones with high pixel density

--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -1,5 +1,8 @@
 .issue-blocks {
-  padding: 70px 0;
+  padding: 120px 0;
+  @include media-down(mobile) {
+    padding: 70px 0;
+  }
 
   .issues {
     display: flex;
