--- a/src/components/Partners/PartnerCarousel.scss
+++ b/src/components/Partners/PartnerCarousel.scss
@@ -1,7 +1,26 @@
 .partner-carousel {
   .partners {
-    .slider {
-      display: block;
+    .partner {
+      width: 100%;
+      margin: 0;
+      padding: 0 15px;
+
+      &:nth-child(even) {
+        margin-right: 0;
+      }
+
+      .image-container {
+        padding-bottom: 0;
+        width: 100%;
+        height: 65vw;
+        max-width: 400px;
+        max-height: 400px;
+        margin: 0 auto 20px;
+
+        .colourful-background {
+
+        }
+      }
     }
   }
   .progress-dots {
