--- a/src/components/Slices/PartnerShowcase.scss
+++ b/src/components/Slices/PartnerShowcase.scss
@@ -3,7 +3,7 @@
   .wrapper {
     max-width: 1152px;
 
-    @include media-down(small-mobile) {
+    @include media-down(mobile) {
       padding: 0;
     }
   }
@@ -11,6 +11,10 @@
   .block-title {
     @include h1();
     text-align: center;
+
+    @include media-down(mobile) {
+      padding: 0 20px;
+    }
 
     @include media-down(small-mobile) {
       margin-bottom: 20px;
@@ -22,6 +26,10 @@
     text-align: center;
     max-width: 650px;
     margin: 0 auto 60px;
+
+    @include media-down(mobile) {
+      padding: 0 20px;
+    }
 
     @include media-down(small-mobile) {
       margin-bottom: 30px;
